Reorganize cpr scripts

--- a/examples/02-blazegraph-examples/common/Makefile
+++ b/examples/02-blazegraph-examples/common/Makefile
@@ -1,20 +1,20 @@
-SCRATCH_DIR=./.scratch
+CPR_OUTPUTS_DIR=./cpr
+CPR_SCRATCH_DIR=${CPR_OUTPUTS_DIR}/.scratch
 
 RUN_WORKSPACE_DIR=./workspace
 RUN_SCRIPT_FILE=${RUN_WORKSPACE_DIR}/run.sh
-RUN_OUTPUT_FILE=${SCRATCH_DIR}/run.txt
+RUN_OUTPUT_FILE=${CPR_OUTPUTS_DIR}/run.txt
 
 REPROZIP_TRACE_DIR=.reprozip-trace
-REPROZIP_LOG_FILE=${SCRATCH_DIR}/reprozip-trace-log.txt
+REPROZIP_LOG_FILE=${CPR_SCRATCH_DIR}/reprozip-trace-log.txt
 
-REPORT_OUTPUT_DIR=./reports
-REPORT_SCRIPT_FILE=../common/run_report.sh
-REPORT_OUTPUT_FILE=${REPORT_OUTPUT_DIR}/report.txt
+REPORT_SCRIPT_FILE=../common/report.sh
+REPORT_OUTPUT_FILE=${CPR_OUTPUTS_DIR}/report.txt
 
 DIRS=${CPR_REPORT_DIR}  	\
-	 ${SCRATCH_DIR} 		\
-	 ${REPROZIP_TRACE_DIR}	\
-	 ${REPORT_OUTPUT_DIR}
+	 ${CPR_OUTPUTS_DIR}		\
+	 ${CPR_SCRATCH_DIR} 	\
+	 ${REPROZIP_TRACE_DIR}
 
 all: run
 
