Reorganized example directories and scripts

--- a/examples/02-blazegraph-examples/02-hello-go/Makefile
+++ b/examples/02-blazegraph-examples/02-hello-go/Makefile
@@ -1,7 +1,6 @@
 include ../common/Makefile
 
-build:
-	cd workspace 							&& \
-	mkdir -p bin		 					&& \
-	go mod tidy 							&& \
+build-code:
+	cd workspace 					&& \
+	go mod tidy 					&& \
 	go build -v -o bin/hello_go .
