--- a/examples/02-blazegraph-examples/common/Makefile
+++ b/examples/02-blazegraph-examples/common/Makefile
@@ -6,7 +6,7 @@ WORKSPACE_BIN_DIR=${WORKSPACE_DIR}/bin
 
 RUN_SCRIPT_FILE=${WORKSPACE_DIR}/run.sh
 
-REPROZIP_TRACE_DIR=.reprozip-trace
+REPROZIP_TRACE_DIR=${CPR_DIR}/.reprozip-trace
 REPROZIP_STDOUT_FILE=${SCRATCH_DIR}/reprozip_stdout.txt
 REPROZIP_STDERR_FILE=${SCRATCH_DIR}/reprozip_stderr.txt
 
@@ -14,9 +14,8 @@ REPORTS_RUN_SCRIPT=../common/run_reports.sh
 REPORTS_RUN_SUMMARY=${CPR_DIR}/reports_summary.txt
 
 DIRS=${WORKSPACE_BIN_DIR}	\
-	 ${CPR_DIR}  	\
- 	 ${SCRATCH_DIR} 	\
- 	 ${REPROZIP_TRACE_DIR}
+	 ${CPR_DIR}  			\
+ 	 ${SCRATCH_DIR}
 
 all: build run
 
@@ -27,8 +26,7 @@ $(DIRS):
 
 clean:
 	rm -rfv ${WORKSPACE_BIN_DIR}	\
-			${CPR_DIR}  			\
-			${REPROZIP_TRACE_DIR}
+			${CPR_DIR}
 
 build-code:
 
@@ -37,8 +35,8 @@ build: ${WORKSPACE_BIN_DIR} build-code
 rerun: clean run
 
 trace: $(TRACE_DIRS)
-	reprozip -v trace --overwrite ${RUN_SCRIPT_FILE} 	\
-		1> ${REPROZIP_STDOUT_FILE} 						\
+	reprozip -v trace --overwrite -d ${REPROZIP_TRACE_DIR}	${RUN_SCRIPT_FILE} 	\
+		1> ${REPROZIP_STDOUT_FILE} 												\
 		2> ${REPROZIP_STDERR_FILE} 
 
 report: ${CPR_DIR}
