Renamed cpr directory in each example to run

--- a/examples/02-blazegraph-examples/common/Makefile
+++ b/examples/02-blazegraph-examples/common/Makefile
@@ -1,20 +1,20 @@
-CPR_DIR=./cpr
-SCRATCH_DIR=${CPR_DIR}/.scratch
+RUN_DIR=./run
+SCRATCH_DIR=${RUN_DIR}/.scratch
 
 WORKSPACE_DIR=./workspace
 WORKSPACE_BIN_DIR=${WORKSPACE_DIR}/bin
 
 RUN_SCRIPT_FILE=${WORKSPACE_DIR}/run.sh
 
-REPROZIP_TRACE_DIR=${CPR_DIR}/.reprozip-trace
+REPROZIP_TRACE_DIR=${RUN_DIR}/.reprozip-trace
 REPROZIP_STDOUT_FILE=${SCRATCH_DIR}/reprozip_stdout.txt
 REPROZIP_STDERR_FILE=${SCRATCH_DIR}/reprozip_stderr.txt
 
 REPORTS_RUN_SCRIPT=../common/run_reports.sh
-REPORTS_RUN_SUMMARY=${CPR_DIR}/reports_summary.txt
+REPORTS_RUN_SUMMARY=${RUN_DIR}/reports_summary.txt
 
 DIRS=${WORKSPACE_BIN_DIR}	\
-	 ${CPR_DIR}  			\
+	 ${RUN_DIR}  			\
  	 ${SCRATCH_DIR}
 
 all: build run
@@ -26,7 +26,7 @@ $(DIRS):
 
 clean:
 	rm -rfv ${WORKSPACE_BIN_DIR}	\
-			${CPR_DIR}
+			${RUN_DIR}
 
 build-code:
 
@@ -39,6 +39,6 @@ trace: $(TRACE_DIRS)
 		1> ${REPROZIP_STDOUT_FILE} 												\
 		2> ${REPROZIP_STDERR_FILE} 
 
-report: ${CPR_DIR}
+report: ${RUN_DIR}
 	bash ${REPORTS_RUN_SCRIPT} > ${REPORTS_RUN_SUMMARY}
 
