Example run target now runs in workspace directory

--- a/examples/02-blazegraph-examples/common/Makefile
+++ b/examples/02-blazegraph-examples/common/Makefile
@@ -1,15 +1,14 @@
-RUN_DIR=./run
+
+EXAMPLE_DIR=$(shell pwd)
+WORKSPACE_DIR=${EXAMPLE_DIR}/workspace
+WORKSPACE_BIN_DIR=${WORKSPACE_DIR}/bin
+RUN_DIR=${EXAMPLE_DIR}/run
+REPROZIP_TRACE_DIR=${RUN_DIR}/.reprozip-trace
 SCRATCH_DIR=${RUN_DIR}/.scratch
 
-WORKSPACE_DIR=./workspace
-WORKSPACE_BIN_DIR=${WORKSPACE_DIR}/bin
-
 RUN_SCRIPT_FILE=${WORKSPACE_DIR}/run.sh
-
-REPROZIP_TRACE_DIR=${RUN_DIR}/.reprozip-trace
 REPROZIP_STDOUT_FILE=${SCRATCH_DIR}/reprozip_stdout.txt
 REPROZIP_STDERR_FILE=${SCRATCH_DIR}/reprozip_stderr.txt
-
 REPORTS_RUN_SCRIPT=../common/run_reports.sh
 REPORTS_RUN_SUMMARY=${RUN_DIR}/reports_summary.txt
 
@@ -41,8 +40,9 @@ build: ${WORKSPACE_BIN_DIR} build-code
 rerun: clean run
 
 trace:
-	reprozip -v trace --overwrite -d ${REPROZIP_TRACE_DIR}	${RUN_SCRIPT_FILE} 	\
-		1> ${REPROZIP_STDOUT_FILE} 												\
+	cd ${WORKSPACE_DIR}															&&	\
+	reprozip -v trace --overwrite -d ${REPROZIP_TRACE_DIR}	${RUN_SCRIPT_FILE} 		\
+		1> ${REPROZIP_STDOUT_FILE} 													\
 		2> ${REPROZIP_STDERR_FILE} 
 
 report: ${RUN_DIR}
