Prepare for release v0.2.5

--- a/.repro/Dockerfile
+++ b/.repro/Dockerfile
@@ -102,7 +102,7 @@ RUN echo '***** Download and build XSB 3.8 *****'                           \
 
 ENV GOPATH ${REPRO_MNT}/.gopath
 
-RUN echo 'PATH=${USER_BIN}:${GOPATH}/bin:${HOME}/go/bin:/usr/local/go/bin:${PATH}' >> ${BASHRC}
+RUN echo "PATH=${REPRO_MNT}/binaries:${USER_BIN}:${GOPATH}/bin:${HOME}/go/bin:/usr/local/go/bin:${PATH}" >> ${BASHRC}
 RUN echo "export IN_RUNNING_REPRO=${REPRO_NAME}" >> ${BASHRC}
 RUN echo "cd ${REPRO_MNT}" >> ${BASHRC}
 
