--- a/Makefile-go
+++ b/Makefile-go
@@ -1,5 +1,6 @@
-BINARIES_DIR=./binaries
-LINUX_BINARY=${BINARIES_DIR}/cpr-0.2.5-linux-x86-64
+BINARIES_DIR=${REPRO_MNT}/binaries
+LINUX_BINARY_NAME=cpr-0.2.5-linux-x86-64
+LINUX_BINARY=${BINARIES_DIR}/${LINUX_BINARY_NAME}
 
 clean:
 	go clean -cache -x ./... || true
@@ -27,11 +28,12 @@ install: depend
 package: ${LINUX_BINARY}
 
 ${LINUX_BINARY}: depend
-	CGO_ENABLED=1 GOOS=linux go build -a -o ${LINUX_BINARY} ./cmd/...
+	CGO_ENABLED=1 GOOS=linux go build -o ${LINUX_BINARY} ./cmd/...
 	(echo "\nExecutable has these properties:\n" &&						\
-	file -b ${LINUX_BINARY} | sed "s/, /\\n/g" && 					\
+	file -b ${LINUX_BINARY} | sed "s/, /\\n/g" && 						\
 	echo "\nExecutable dynamically links to these libraries:\n" &&		\
 	ldd ${LINUX_BINARY} | sort											\
 	) > ${LINUX_BINARY}.properties
-
+	rm -f ${BINARIES_DIR}/cpr
+	ln -s ${LINUX_BINARY_NAME} ${BINARIES_DIR}/cpr
 
